--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,11 @@ header {
 
 main {
     grid-area: main-content;
+    padding: var(--global-spacing);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 footer {
@@ -40,4 +45,15 @@ footer {
     color: white;
     text-align: center;
     font-size: 1rem;
+}
+
+#game-grid {
+    width: 50%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+#game-grid .game-grid-cell {
+    border: 1px solid black;
+    aspect-ratio: 1 / 1;
 }
